--- a/src/sass/components/_portfolio.scss
+++ b/src/sass/components/_portfolio.scss
@@ -16,6 +16,10 @@ background: linear-gradient(to right, #89253e, #3a6186); /* W3C, IE 10+/ Edge, F
   &__list {
     color: rgba(255, 255, 0,.7);
     list-style-type: decimal;
+ 
+    @include media(small) {
+      width: 100%;
+    }
   }
   
   &__code {
@@ -36,11 +40,18 @@ background: linear-gradient(to right, #89253e, #3a6186); /* W3C, IE 10+/ Edge, F
   }
   
   &__link {
+    display: flex;
     padding: 0 1.5rem;
     position: relative;
     color: rgba(255, 255, 255,.7);
     border-bottom: 1px solid transparent;
     transition: .2s;
+ 
+    @include media(small) {
+      justify-content: center;
+      font-size: 2.1rem;
+      padding: 0;
+    }
 
     &:hover, &::before {
       color: shade(rgba(255, 255, 0,.7), 10%);
@@ -65,4 +76,5 @@ background: linear-gradient(to right, #89253e, #3a6186); /* W3C, IE 10+/ Edge, F
 
 .strong {
   font-weight: bold;
+  padding-right: .5rem;
 }
